@@ -3,6 +3,7 @@
 	  "http://docbook.org/xml/5.0/dtd/docbook.dtd" [
 <!ENTITY pref SYSTEM "LIXA_Preface.xml">
 <!ENTITY intro SYSTEM "LIXA_Introduction.xml">
+<!ENTITY install SYSTEM "LIXA_Installation.xml">
 <!ENTITY biblio SYSTEM "LIXA_Bibliography.xml">
 ]>
 <book xmlns="http://docbook.org/ns/docbook">
@@ -22,5 +23,6 @@
   </info>
   &pref;
   &intro;
+  &install;
   &biblio;
 </book>
